# KeyFrame

./: .gitignore  pyproject.toml
LSTM_models/: baseline_lstm.py
checkpoints/: Running_Gait_Analsy_best.pth
configs/: struct_lnn_mzeni.yaml
datasets/: pose_dataset.py  test_dataset.py
engine/: evaluator.py  loss.py  trainer.py
features/: physics_priors.py
models/: mlp_baseline.py  physics_loss.py  struct_lnn.py
models/backbones/: cfc_core.py
models/baselines/: baseline_lstm.py  baseline_transformer.py
models/heads/: event_head.py
tools/: check_cuda.py  check_features.py  check_labels.py  check_npy.py  evaluate.py  evaluate_LSTM.py  evaluate_mlp.py  generate_features.py  generate_labels.py  train.py  train_mlp.py
transformer_models/: baseline_transformer.py
utils/: mediapipe_utils.py  metrics.py  physics_utils.py  visualizer.py  visualizer_mlp.py
