[project]
name = "athlete-pose-struct-lnn"
version = "0.1.0"
description = "基于时序视觉数据的跑姿关键帧提取算法的研究及应用"
readme = "README.md"
requires-python = ">=3.9" # 建议使用 3.9 或 3.10，对硬件库的兼容性最好

dependencies = [
    # 决策层
    "torch>=2.0.0",
    "torchvision>=0.15.0",   # 视觉模型常用辅助库

    # 解析层
    "numpy>=1.24.0",         # 处理高维坐标张量 (.npy)
    "scipy>=1.10.0",         # 用于生成标签时的 find_peaks 寻峰算法

    # 感知层
    "mediapipe>=0.10.4",     # 单目 RGB 实时人体姿态估计
    "opencv-python>=4.8.0",  # 读取 mp4 或直接驱动 USB 摄像头硬件

    # 工程套件：配置、评估与可视化
    "pyyaml>=6.0.1",         # 读取我们刚才写的 configs/*.yaml 实验配置
    "scikit-learn>=1.3.0",   # 精确率、召回率、F1 分数
    "tqdm>=4.66.0",          # 终端进度条，监控 130 万帧数据的处理和训练进度
    "matplotlib>=3.7.0"      # 关键帧提取可视化图表
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["athlete_pose_struct_lnn"]