[project]
name = "athlete-pose-struct-lnn"
version = "0.1.0"
description = "基于时序视觉数据的跑姿关键帧提取算法的研究及应用"
readme = "README.md"

requires-python = ">=3.9,<3.13"

dependencies = [
    # ===== 深度学习 =====
    "torch>=2.8.0",
    "torchvision",
    "torchaudio",

    # ===== 数值计算 =====
    "numpy>=1.24",
    "scipy>=1.10",

    # ===== 感知层 =====
    "mediapipe>=0.10.4",
    "opencv-python>=4.8",

    # ===== 工程工具 =====
    "pyyaml>=6.0.1",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "matplotlib>=3.7",
    "datasets>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["athlete_pose_struct_lnn"]

[tool.uv.sources]
torch = { index = "pytorch-gpu" }
torchvision = { index = "pytorch-gpu" }
torchaudio = { index = "pytorch-gpu" }

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true